# txt-templ

./: .gitignore  README.md
Cli/txt-templ-cli/: Cargo.toml
Cli/txt-templ-cli/src/: main.rs
Notes/: cli-usage.md  grammar.md  miscellaneous.md  spec.md
Templates/templ-api/: Cargo.toml
Templates/templ-api/migrations/: 20230115083909_create_users_table.sql  20230115084238_create_templates_table.sql
Templates/templ-api/src/: main.rs
Templates/txt-templ-compiler/: Cargo.toml
Templates/txt-templ-compiler/src/: content.rs  lib.rs  template.rs
Templates/txt-templ-compiler/src/content/: parse.rs
Templates/txt-templ-parser/: Cargo.toml
Templates/txt-templ-parser/src/: content.rs  lib.rs  template.rs  utils.rs
Templates/txt-templ-parser/src/content/: parse.rs  scan.rs
Templates/wasm-txt-templ/: Cargo.toml
Templates/wasm-txt-templ/site/: index.js
Templates/wasm-txt-templ/src/: lib.rs
txtt-lib/: Cargo.toml
txtt-lib/src/: content.rs  lib.rs  template.rs
txtt-lib/src/content/: meta.rs  parse.rs
txttc/: Cargo.toml  Makefile
txttc/src/: main.rs
txttc/txtt-lib/: Cargo.toml
txttc/txtt-lib/src/: content.rs  template.rs
txttc/txtt-lib/src/content/: scan.rs
txttc/txtt-lib/tests/: parse_response.rs
