[package]
name = "txtt-lib"
version = "0.1.0"
edition = "2021"

[features]
# Dynamic elements are enabled by default.
default = ["dyn"]
serde = ["dep:serde", "dep:serde_with"]
# Enable dynamic elements.
dyn = ["dep:lazy_static"]

[dependencies]
thiserror = "1"
log = "0.4.17"
unic-locale = { version = "0.9.1", features = ["macros"] }

chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "1.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.1"
env_logger = "0.10.0"
once_cell = "1"
