[package]
name = "txttc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
giveup = "0.1.0"
log = "0.4.17"
serde = "1.0.152"
serde_yaml = "0.9.17"
txtt-lib = { version = "0.1.0", features = ["serde"], path = "../txtt-lib" }
