[package]
name = "txtt-lib"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
thiserror = "1"
log = "0.4.17"
unic-locale = { version = "0.9.1", features = ["macros"] }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "1.5", optional = true }
chrono = "0.4.23"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.1"
env_logger = "0.10.0"
once_cell = "1"
